[package]
name = "dimacs-parser"
version = "0.1.0"
authors = ["Robbepop"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/dimacs-parser"
documentation = "https://docs.rs/dimacs-parser"
keywords = ["parser", "dimacs", "sat", "scanner", "iterator"]
description = """Utilities to parse files in DIMACS format which is the de-facto standard for input to SAT solvers."""
categories = ["parsing", "parser-implementations", "text-processing"]

[dependencies]

[features]
# bench = []
