[package]
name = "dimacs"
version = "0.1.0"
authors = ["Robbepop"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/dimacs-parser"
documentation = "https://docs.rs/dimacs"
keywords = ["parser", "dimacs", "sat", "lexer", "format"]
description = """Utilities to parse files in DIMACS .cnf or .sat format
which is useful for participating in the DIMACS SAT solver competitions."""
categories = ["parsing", "parser-implementations", "text-processing"]

[dependencies]
bitflags = "0.8.0"

# [features]
# default = ["bench"]
# bench = []
